<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>charuco_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 node for charuco board detection</description>
  <maintainer email="mederic.fourmy@gmail.com">Mederic Fourmy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
