<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>charuco_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 node for charuco board detection</description>
  <maintainer email="mederic.fourmy@gmail.com">Mederic Fourmy</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python-numpy-quaternion-pip</exec_depend>
  <exec_depend version_gte="4.10">python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
